# discord-rpc-buttons

./: .gitignore  CMakeLists.txt  send-presence.c
examples/send-presence/: CMakeLists.txt
examples/send-presence/include/: discord_rpc.h
examples/send-presence/src/: serialization.cpp
src/: serialization.cpp
